# DeltaRobot-Software

./: .gitignore  CMakeLists.txt  DeltaRobotSoftware.pro  DeltaRobotSoftware_resource.rc  MainWindow.cpp  MainWindow.ui  MainWindow_ui.py  Makefile  Makefile.Debug  Makefile.Release  ObjectInfo.h  README.md  RobotWindow.cpp  RobotWindow.h  RobotWindow.ui  RobotWindow_ui.py  SmartDialog.cpp  SmartDialog.h  TrackingManager.cpp  VariableManager.cpp  main.cpp  resource_rc.py  settings.ini  ui_MainWindow.h  ui_RobotWindow.h  ui_testwindow.h
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: QImage.1409E2E310BA03EB.idx  QInputDialog.BC8E473535DD99B5.idx  QLineEdit.D7E25539EDF0056D.idx  QList.0FCED90E10F3477D.idx  QMap.E908E7452685B709.idx  QMatrix4x4.CFDD5FBF869F93F5.idx  QObject.D3ACA8CE1AE76871.idx  QPointF.AD34C776C870B2DC.idx  QProcess.03B163B42D2FB1F4.idx  QRadioButton.D240558C7396F075.idx  QSerialPort.97A00C96CA4A47D2.idx  QSerialPortInfo.F7F8FF8A950A868B.idx  QSettings.BE96030DD4A831F5.idx  QTabWidget.98ED590EF907EE64.idx  QTextEdit.C35203E55216C849.idx  QThread.516A4C70C9759A7F.idx  QTransform.F763C4775E7EB627.idx  QVBoxLayout.7CA3A4A7292EC963.idx  QVector.8D9CBBBCCEF9A10A.idx  QVector3D.873C8DC515362DFD.idx  QWidget.552A8CA62E85A02D.idx  qabstractitemmodel.h.8B3148B56A5B425B.idx  qabstractsocket.h.906F42A46844FCAB.idx  qaction.h.D8009CA96BAF671F.idx  qglobal.h.9F4D2BEBA304EC0E.idx  qgraphicsscene.h.99E0E2F0EFB4D606.idx  qgraphicsview.h.820FF0218E964936.idx  qhostaddress.h.6217F004BC8900CC.idx  qlabel.h.873112069E927D9A.idx  qlineedit.h.EBC81FE37FC818DD.idx  qmessagebox.h.9124ADD1ACDB0364.idx  qmetatype.h.6864560C268CBEEA.idx  qobject.h.0FE9D92BD274242C.idx  qobjectdefs.h.BDA0837E325443DD.idx  qtcpsocket.h.6C97325C37A29BE9.idx  qtextedit.h.8AE6080E86EE5039.idx  qtypeinfo.h.456AC4C3CF995BF3.idx  qurl.h.EA0CED91AACE1A85.idx  qwidget.h.4450E51AFB407789.idx
device/: DeviceManager.cpp  robot.cpp  robot.h
icon/: icon_rc.py
src/1.0/: AccountWindow_ui.py  FilterWindow_ui.py  GcodeReference_ui.py  ImageViewer.h  LightUI_ui.py  MainWindow.cpp  MainWindow.ui  MainWindow_ui.py  RobotWindow.cpp  RobotWindow.h  RobotWindow.ui.autosave  RobotWindow_ui.py  VariableManager.h  testwindow.ui  testwindow_ui.py
src/1.0/device/: device.cpp
tool/opencv_processing/: README.md  __init__.py  concept.md  node_editor.py  requirements.txt
tool/opencv_processing/nodes/: __init__.py  base_node.py  node_factory.py  output_nodes.py  port.py  processing_nodes.py  source_nodes.py
tool/opencv_processing/project/: __init__.py
tool/opencv_processing/src/: main.py
tool/opencv_processing/ui/: main_window.py  node_editor.py  style.py  toolbar.py
yolov8_detector/: README.md  requirements.txt
yolov8_detector/docs/: api.md  installation.md  usage.md
yolov8_detector/src/: yolov8_detect_gui.py
